fix align

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,6 @@ body {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat; }
-  .header__contacts address {
-    vertical-align: middle; }
 
 .header__about {
   text-align: center;
